@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-02T16:19:10Z",
-  "count_outdated" : 366,
-  "uniques_outdated" : 210,
-  "count" : 393,
-  "uniques" : 227,
+  "timestamp" : "2022-07-03T01:28:24Z",
+  "count_outdated" : 369,
+  "uniques_outdated" : 212,
+  "count" : 395,
+  "uniques" : 228,
   "clones" : [
-    {
-      "timestamp": "2022-06-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-19T00:00:00Z",
       "count": 1,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
