@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-06-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-06-19T00:00:00Z",
       "count": 1,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
